--- a/package.json
+++ b/package.json
@@ -62,12 +62,14 @@
         "@tabler/icons-react": "^3.31.0",
         "@tailwindcss/postcss": "^4.0.0",
         "@tanstack/react-table": "^8.21.2",
+        "axios": "^1.10.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "date-fns": "^4.1.0",
         "eslint": "8.48.0",
         "eslint-config-next": "15.1.0",
+        "framer-motion": "^12.18.1",
         "input-otp": "^1.4.2",
         "kbar": "^0.1.0-beta.45",
         "lucide-react": "^0.476.0",
