--- a/.prettierrc
+++ b/.prettierrc
@@ -7,6 +7,7 @@
     "jsxSingleQuote": true,
     "singleQuote": true,
     "tabWidth": 4,
+    "printWidth": 100,
     "endOfLine": "lf",
     "plugins": ["prettier-plugin-tailwindcss"]
 }
