--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "eslint-config-next": "15.1.0",
         "framer-motion": "^12.18.1",
         "html2canvas": "^1.4.1",
+        "i18n-iso-countries": "^7.14.0",
         "input-otp": "^1.4.2",
         "kbar": "^0.1.0-beta.45",
         "lucide-react": "^0.476.0",
@@ -103,12 +104,12 @@
     },
     "devDependencies": {
         "@faker-js/faker": "^9.3.0",
+        "@types/html2canvas": "^1.0.0",
         "@types/node": "22.10.2",
         "@types/react": "19.0.1",
         "@types/react-dom": "19.0.2",
         "@types/sort-by": "^1.2.3",
         "@types/uuid": "^10.0.0",
-        "@types/html2canvas": "^1.0.0",
         "@typescript-eslint/eslint-plugin": "^6.11.0",
         "husky": "^9.1.7",
         "lint-staged": "^15.2.11",
