--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
         "react-responsive": "^10.0.0",
         "recharts": "^2.15.1",
         "sharp": "^0.33.5",
+        "shiki": "^3.7.0",
         "sonner": "^1.7.1",
         "sort-by": "^1.2.0",
         "tailwind-merge": "^3.0.2",
