--- a/package.json
+++ b/package.json
@@ -67,12 +67,16 @@
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "date-fns": "^4.1.0",
+        "docxtemplater": "^3.65.2",
         "eslint": "8.48.0",
         "eslint-config-next": "15.1.0",
+        "file-saver": "^2.0.5",
         "framer-motion": "^12.18.1",
         "html2canvas": "^1.4.1",
         "i18n-iso-countries": "^7.14.0",
         "input-otp": "^1.4.2",
+        "jspdf": "^3.0.1",
+        "jszip": "^3.10.1",
         "kbar": "^0.1.0-beta.45",
         "lucide-react": "^0.476.0",
         "match-sorter": "^8.0.0",
@@ -81,6 +85,7 @@
         "next-themes": "^0.4.6",
         "nextjs-toploader": "^3.7.15",
         "nuqs": "^2.4.1",
+        "pizzip": "^3.2.0",
         "postcss": "8.4.49",
         "react": "19.0.0",
         "react-day-picker": "^8.10.1",
