--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "next-shadcn-dashboard-starter",
+    "name": "xdecode",
     "version": "1.0.0",
     "private": true,
     "author": {
-        "name": "Kiran",
-        "url": "https://github.com/Kiranism"
+        "name": "Geovanni Mena",
+        "url": "https://github.com/geo-mena"
     },
     "scripts": {
         "dev": "next dev --turbopack",
