--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
         "next-themes": "^0.4.6",
         "nextjs-toploader": "^3.7.15",
         "nuqs": "^2.4.1",
+        "oui-data": "^1.1.388",
         "pizzip": "^3.2.0",
         "postcss": "8.4.49",
         "react": "19.0.0",
